# bitpattern

./: Cargo.toml  README.md
.github/: dependabot.yml
src/: lib.rs
tests/: test.rs
