[package]
name = "bitpattern"
version = "0.1.0"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/bitmatch"
keywords = ["bit", "pattern"]
categories = ["rust-patterns"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "bitwise pattern matching and extracting"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
paste = "0.1.18"
