[package]
name = "bitpattern"
version = "0.1.1-pre"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/bitmatch"
keywords = ["bit", "pattern"]
categories = ["rust-patterns"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "bitwise pattern matching and extracting"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
paste = "1.0.5"

[package.metadata.release]
dev-version-ext             = "pre"
pre-release-commit-message  = "Prepare to v{{version}}"
post-release-commit-message = "Start next development iteration v{{version}}"
tag-message                 = "Bump version to {{version}}"
tag-prefix                  = ""
pre-release-replacements    = [
    {file = "README.md", search = "bitpattern = \"[a-z0-9\\.-]+\"", replace = "bitpattern = \"{{version}}\""},
]
